    Swish.RDF.RDFGraph; use arcSubj, arcPred or arcObj instead.
    
  - Clarified that Swish.RDF.RDFDatatypeXsdDecimal is for xsd:decimal
    rather than xsd:double.

  - Removed the containedIn element of the LDGraph type class as it
    was un-used.

  - Removed various exported symbols from a range of modules as they were
    un-used.

  - Bump the upper constraint on the containers package to include
    version 0.5.

  - Support version 0.9 of intern using conditional compilation in
    Data.Interned.URI (for ghc 7.4)

  - Switch to Control.Exception.try from System.IO.Error.try to avoid
    complaints from ghc 7.4.2

  - Removed the Swish.Utils.MiscHelpers module and moved single-use
    functionality out of Swish.Utils.ListHelpers.

  - Removed partCompareOrd, partCompareMaybe, partCompareListOrd and 
    partCompareListPartOrd from Swish.Utils.PartOrderedCollection.

  - Do not define swap if using GHC >= 7.0.1.

0.6.5.3:

  - Updated cabal file so that tests depend on the library rather
    than individual modules.

  - fix intern to 0.8 for ghc < 7.4 and 0.8.* for greater

0.6.5.2:

  - Upgrade polyparse upper limit to include version 1.8.

0.6.5.1:

  - Haddock fixes.

0.6.5.0:

  - Dependency updates (updated filepath and removed array).

0.6.4.0:

  - Added support for xsd:decimal with Swish.RDF.RDFDatatypeXsdDecimal
    and Swish.RDF.MapXsdDecimal thanks to William Waites
    (<https://bitbucket.org/ww>).

0.6.3.0:

  - Added Swish.RDF.Vocabulary.SIOC.

0.6.2.1:

  - hackage build fixes only

0.6.2.0:

  - Split out vocabularies into Swish.RDF.Vocabulary.DublinCore,
    Swish.RDF.Vocabulary.FOAF, Swish.RDF.Vocabulary.Geo,
    Swish.RDF.Vocabulary.OWL, Swish.RDF.Vocabulary.RDF, and
    Swish.RDF.Vocabulary.XSD (some of these are new and additional
    terms added to the pre-existing vocabularies). A few have also
    been added to Swish.RDF.RDFGraph.

  - Minimum Cabal version has been updated to 1.9.2 as the tests have